Changes for Perl extension SDL-Tutorial-3DWorld

0.22 to be completed
	- The bounding box actor now also displays a traditional
	  red/green/blue axis on the original of each actor.
	- Flying camera renamed as the God camera.

0.21 Tue 28 Dec 2010
	- Adding directory-based asset support, which is needed for linking
	  model files to their supporting texture (etc) files.
	- Reorganised the file parsers into the ::Asset::* namespace.
	- Adding a basic MTL file parser to add materials to OBJ models.
	- Added an actor for showing the contents of a MTL file
	- Added support for transparent materials in MTL files
	- Actor display order is now sorted by descending distance from the camera
	  to allow the alpha blending of transparent and anti-aliased objects
	  to render correctly and prevent objects behind them "dissapearing".
	- Added angle and elevation to the diagnostic console.
	- Rewrote all my camera movement math as it was rotten. The new version is
	  much easier to read and supports holding space down to go "up" in a camera
	  angle relative direction.
	- Added support for bounding boxes to actors.
	- Added a bounding box actor, which is a semi-transparent white line cube
	  that follows another actor around and highlights their bounding box.
	- Added support for loading materials in OBJ files automatically from their
	  respective MTL files.
	- Added a plain => 1 option for disabling automatic MTL loading in cases
	  where there is no MTL file and you just want a plain OBJ model.
	- Added a herd of dangerous wild toilet plungers.
	- Added a simple demonstration of actor-culling optimisation that skips
	  drawing any actor that is behind the camera. This is nowhere near as good
	  as frustrum culling (culling to the cemera's observation pyramid) but is
	  simpler to implement and does the job for now.

0.20 Mon 20 Dec 2010
	- Apparently OpenGL convention dictates that all polygons have their
	  points declared counter-clockwise to the "front" of the polygon.